<resources>
    <string name="app_name">FilmTicket</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_order">无相关订单</string>
    <string name="share_title">分享到</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_wechat_friend">微信朋友圈</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_sms">短信</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="weibosdk_demo_token_to_string_format_1">"Token：%1$s
有效期：%2$s"</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="tickets">购票</string>
    <string name="film">电影</string>
    <string name="cinemas">影院</string>
    <string name="activities">活动</string>
    <string name="my">我的</string>
    <string name="user">用户</string>
    <string name="user_name">用户名</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="telephone">联系电话:15926962252</string>
    <string name="telephone_vc">联系电话:15926962252</string>
    <string name="telephone_num">此处显示客服电话</string>
    <string name="tickets_buy">排期购票</string>
    <string name="tickets_price_unit">元起</string>
    <string name="tickets_playing">正在热映</string>
    <string name="tickets_upcoming">即将上映</string>
    <string name="tickets_fragment_last_page">已是最后一页</string>
    <string name="tickets_fragment_only_one_film">只有一部影片</string>
    <string name="city_title">选择城市</string>
    <string name="city_content_title">最近选择的城市</string>
    <string name="city_location_city">定位城市</string>
    <string name="city_content_nodata">无</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_message">我的消息</string>
    <string name="choose_cinemas">选择影院</string>
    <string name="cinemas_activites">影院活动</string>
    <string name="cinemas_activites_news">活动资讯</string>
    <string name="cinemas_warn">温馨提示:电影开场前30分钟关闭在线售票</string>
    <string name="can_not_text">敬请期待</string>
    <string name="cinemainfo_yuan">元</string>
    <string name="cinemainfo_have_seats">余座 充足</string>
    <string name="cinemainfo_stop_sell">停止售票</string>
    <string name="cinemainfo_no_film_tips">没有您选择的影片，请选择其他影片</string>
    <string name="choose_seat">选座</string>
    <string name="chooseseat_good">选好了</string>
    <string name="choose_seat_have_join">您已参加过立减/立减活动</string>
    <string name="payment_order">支付订单</string>
    <string name="payment_order_ticketsinfo">取票信息</string>
    <string name="payment_order_phonenum">接收短信的手机号码</string>
    <string name="payment_order_accounts">结算</string>
    <string name="payment_order_choosepayment">选择支付方式</string>
    <string name="payment_order_wechat">微信安全支付</string>
    <string name="payment_order_alipay">支付宝支付</string>
    <string name="payment_order_unionpay">银联支付</string>
    <string name="payment_order_tenpay">财付通一键支付</string>
    <string name="payment_order_sure">确认订单，去支付</string>
    <string name="payment_order_edit_phonenum">编辑手机号</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="payment_order_edit_hint">请输入手机号码</string>
    <string name="payment_order_dialog_not_null">不能为空</string>
    <string name="payment_order_dialog_input_eleven">请输入11位手机号</string>
    <string name="payment_order_order_dialog_content">放弃已选座位并返回？</string>
    <string name="payment_order_order_timeout_dialog_content">支付已超时</string>
    <string name="payment_order_phone_no_null">手机号不能为空</string>
    <string name="payment_order_phone_eleven">手机号应为11位</string>
    <string name="payment_order_pay_fail">订单支付失败了，重新试一下呗</string>
    <string name="payment_order_pay_fail_title">支付失败</string>
    <string name="payment_order_pay_fail_i_know">我知道了</string>
    <string name="payment_order_pay_no_pay">未知原因无法支付，请取消订单</string>
    <string name="payment_order_apply_red_package">输入兑换码领取新抵扣券</string>
    <string name="payment_order_apply_exchange">输入密码领取新兑换券</string>
    <string name="payment_order_red_package_add">添加</string>
    <string name="payement_order_red_package_no_null">兑换码不能为空</string>
    <string name="payment_order_reduce_dialog_title">亲，不要太贪心哦</string>
    <string name="payment_order_reduce_dialog_content">您已参加了立减/立减到活动，这笔订单不可以再使用抵扣券了</string>
    <string name="payment_order_binding_redpackage">您已经使用过抵扣券</string>
    <string name="payment_order_available">个可用</string>
    <string name="payment_order_hipiao_balance">哈票账户余额</string>
    <string name="payment_order_hipiao_pw_no_null">密码不能为空</string>
    <string name="payment_order_hipiao_no_bind_mobile">哈票账户没有绑定手机号,请先绑定</string>
    <string name="payment_order_hipiao_have_bind">您已经使用哈票</string>
    <string name="payment_order_coupon">兑换券</string>
    <string name="payment_order_discount_only_one">只能选择一种优惠</string>
    <string name="payment_order_money_cant_coupon">价钱低于票价,不能用兑换券</string>
    <string name="payment_order_reduce_no_red">立减活动不可使用抵扣券</string>
    <string name="payment_order_reduce_no_coupon">立减活动不可使用兑换券</string>
    <string name="payment_order_red_no_coupon">已经使用了抵扣券，不可再用兑换券</string>
    <string name="payment_order_coupon_no_red">已经使用了兑换券，不可再用抵扣券</string>
    <string name="payment_order_cant_update_order">不可修改订单</string>
    <string name="payment_order_vc_balance">VC账户余额</string>
    <string name="payment_order_only_account">只能选择一个账户</string>
    <string name="payment_order_btn_next">下一步</string>
    <string name="payment_order_add_red_no_use">添加成功,限时段抵扣券暂不可用</string>
    <string name="payment_order_red_package_no">没有可用抵扣券</string>
    <string name="payment_order_get_captcha">获取验证码</string>
    <string name="msg_no_network">网络异常，请检查网络</string>
    <string name="msg_clear_cachedata">清除缓存成功</string>
    <string name="login_title">登录</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_hint_password">密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_no_null">手机号和密码不能为空</string>
    <string name="login_mobile">手机号应为11位</string>
    <string name="login_password">密码不能小于6位</string>
    <string name="login_password_tips">用户名或密码不正确</string>
    <string name="register_title">注册</string>
    <string name="register_agree">同意以下协议并注册</string>
    <string name="register_hint_tel">+86</string>
    <string name="register_hint_captcha">验证码</string>
    <string name="register_hint_nickname">昵称</string>
    <string name="register_hint_password">6-20位数字/字母/符号的组合</string>
    <string name="register_hint_password_new">新密码</string>
    <string name="register_vc_agreement">哈票服务协议</string>
    <string name="register_get_captcha">获取</string>
    <string name="register_password_tips">密码6-20位字母、数字，符号至少两种组合</string>
    <string name="register_success">注册成功</string>
    <string name="register_sending_msg">发送中...</string>
    <string name="register_send_msg_success">短信发送成功,请注意查收</string>
    <string name="register_mobile_no_null">手机号不能为空</string>
    <string name="register_code_no_null">验证码不能为空</string>
    <string name="register_nick_name_no_null">昵称不能为空</string>
    <string name="register_passwrod_no_null">密码不能为空</string>
    <string name="register_code">验证码应为6位</string>
    <string name="register_go_bind">去绑定</string>
    <string name="register_skip">跳过</string>
    <string name="find_password_title">找回密码</string>
    <string name="find_password_sure">确定</string>
    <string name="find_password_synchronous_title">同步修改影院微信官网登录密码</string>
    <string name="choose_seats_max_num">最多选择4个座位</string>
    <string name="choose_seats_normal">可选</string>
    <string name="choose_seats_checked">已选</string>
    <string name="choose_seats_lock">已售</string>
    <string name="choose_seats_please_choose_seats">请先选座</string>
    <string name="choose_seats_dialog_title">提示</string>
    <string name="choose_seats_dialog_unpay_tips">您还有一笔订单未支付</string>
    <string name="choose_seats_lock_seats_success">锁座成功,请在15分钟内支付</string>
    <string name="choose_seats_cancel_order_success">取消订单成功</string>
    <string name="choose_seats_cancel_order_fail">取消订单失败</string>
    <string name="choose_seats_max_min_seats_tips">最边上不能留下单个空座</string>
    <string name="choose_seats_middle_empty_seats_tips">中间不要留下单个空座</string>
    <string name="choose_seats_side_empty_seats_tips">座位旁边不要留下单个空座</string>
    <string name="deal_finish">交易完成</string>
    <string name="deal_deal">交易</string>
    <string name="deal_buy_success">购买成功</string>
    <string name="deal_buy_fail">购票失败</string>
    <string name="deal_ticket_code">取票码:</string>
    <string name="deal_serial_num">序列号:</string>
    <string name="deal_mobile">手机号:</string>
    <string name="deal_tips_title">温馨提示</string>
    <string name="deal_tips_content1">取票码即将发送到您填写的手机号中</string>
    <string name="deal_tips_content2">您可以通过短信、截屏方式记录取票码，也可以在（我的-我的订单-未取票）中随时查看订单信息哦！</string>
    <string name="deal_back_homepage">返回首页</string>
    <string name="deal_view_orders">查看订单</string>
    <string name="deal_cinema_tel">影院电话：</string>
    <string name="deal_attention_content">哈票小V再次，快关注我的公众账号哦，买影票找影院都好方便哒！快来电我吧！</string>
    <string name="deal_fail_tips_content">已付票款将退回您的支付账户！</string>
    <string name="deal_fail_pay">支付失败</string>
    <string name="deal_fail_pay_tips_content">您的订单被劫持啦！</string>
    <string name="deal_fail_pay_repay">重新支付</string>
    <string name="deal_ticket_going">正在出票，请稍候</string>
    <string name="deal_ticket_going_tips">取票码将发送到您填写的手机号中，请牢记</string>
    <string name="deal_not_login_tips">登录用户才可用</string>
    <string name="deal_ticket_going2">正在出票...</string>
    <string name="deal_dialog_dialog_title">注意</string>
    <string name="deal_dialog_dialog_content">未登录用户购票不会生成订单信息，建议您截屏保存信息。同时我们会以短信形式将取票码发给您，请保持手机通讯畅通并妥善保管短信</string>
    <string name="my_fragment_feedback">意见反馈</string>
    <string name="my_orders_title">我的订单</string>
    <string name="my_orders_yuan">元</string>
    <string name="my_orders_total">共计：</string>
    <string name="my_orders_total_pay">支付：</string>
    <string name="my_orders_total_pay_need">需支付：</string>
    <string name="my_orders_cancel_order">取消订单</string>
    <string name="my_orders_pay">去支付</string>
    <string name="user_feedback_btn">提交</string>
    <string name="user_feedback_text_tip_hint">感谢您关注哈票，希望您多提意见和建议，我们会尽快改进产品。</string>
    <string name="user_feedback_contant_tip_hint">手机 / QQ / 邮箱</string>
    <string name="my_discount_activity_vouchers">抵扣券</string>
    <string name="my_discount_activity_exchange">兑换券</string>
    <string name="recharge_tip">单笔充值不要超过500元，账户余额不要超过2000元，充值成功后不支持提现</string>
    <string name="recharge_edit_hint">输入充值金额</string>
    <string name="recharge_btn_sure">确定充值</string>
    <string name="my_order">我的订单</string>
    <string name="my_discount">我的优惠</string>
    <string name="my_setting">设置</string>
    <string name="my_discount_recharge">账户充值</string>
</resources>